@@ -1,18 +1,17 @@
 [![CTS2 Development Framework][Project Logo]][Website]
+
+[![Build Status](https://travis-ci.org/cts2/cts2-framework.png)](https://travis-ci.org/cts2/cts2-framework)
+
 What is the CTS2 Development Framework?
 ----------------
 The CTS2 Development Framework is a toolkit for rapidly creating CTS2 implementations.
 
-Visit our [website][Website] or get support on our [forums][Forums].  
-Track and submit issues and bugs on our [issue tracker][Issues].
-
-Follow us on Twitter!
----------------------
-[![Follow us on Twitter][Twitter Logo]][Twitter]
+Visit the [website][Website] for more information.  
+Track and submit issues and bugs on the [issue tracker][Issues].
 
 Source
 ------
-The latest and greatest source can be found on [GitHub].  
+The source code can be found on [GitHub].  
 
 Compiling
 ---------
@@ -20,6 +19,11 @@ CTS2 Development Framework uses Maven to handle its dependencies.
 
 * Install Maven 3 (http://maven.apache.org/download.html)  
 * Checkout this repo and run: `mvn clean install`
+* NOTE: It may be necessary to configure ```MAVEN_OPTS``` to allow Maven more memory for the compilation. For example: ```MAVEN_OPTS="-Xmx500m -XX:MaxPermSize=256m"```
+
+Contributing
+------------
+Contributions are welcome. To contribute, fork this repository, create an issue on the on the [issue tracker][Issues], and send a pull request.
 
 [Project Logo]: http://informatics.mayo.edu/cts2/framework/wp-content/uploads/2011/10/logo4-small4.png
 [License]: http://www.apache.org/licenses/LICENSE-2.0
@@ -27,5 +31,3 @@ CTS2 Development Framework uses Maven to handle its dependencies.
 [Forums]: http://informatics.mayo.edu/cts2/framework/forum
 [GitHub]: https://github.com/cts2/cts2-framework
 [Issues]: https://github.com/cts2/cts2-framework/issues
-[Twitter]: https://twitter.com/cts2framework
-[Twitter Logo]: http://informatics.mayo.edu/cts2/framework/images/twitter_logo.jpg
